zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/address_utxos@testnet_1.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
expression: stored_address_utxos
---
[
  (OutputLocation(
    transaction_location: TransactionLocation(
      height: Height(1),
      index: TransactionIndex(0),
    ),
    output_index: OutputIndex(1),
  ), AddressUnspentOutputs(
    inner: [
      OutputLocation(
        transaction_location: TransactionLocation(
          height: Height(1),
          index: TransactionIndex(0),
        ),
        output_index: OutputIndex(1),
      ),
    ],
  )),
]
