zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/block_hashes@mainnet_0.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
assertion_line: 141
expression: stored_block_hashes

---
[
  (Height(0), BlockHash("00040fe8ec8471911baa1db1266ea15dd06b4a8a5c453883c000b031973dce08")),
]
