zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/block_hashes@testnet_0.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
assertion_line: 141
expression: stored_block_hashes

---
[
  (Height(0), BlockHash("05a60a92d99d85997cce3b87616c089f6124d7342af37106edc76126334a2c38")),
]
