zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/block_hashes@testnet_2.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
assertion_line: 141
expression: stored_block_hashes

---
[
  (Height(0), BlockHash("05a60a92d99d85997cce3b87616c089f6124d7342af37106edc76126334a2c38")),
  (Height(1), BlockHash("025579869bcf52a989337342f5f57a84f3a28b968f7d6a8307902b065a668d23")),
  (Height(2), BlockHash("00f1a49e54553ac3ef735f2eb1d8247c9a87c22a47dbd7823ae70adcd6c21a18")),
]
